# aliyun-oss-c-sdk

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README-CN.md  README.md  oss_c_sdk.sln  oss_c_sdk_2008.sln
.github/workflows/: linux-clang.yml  linux-gcc.yml  windows.yml
oss_c_sdk/: aos_buf.c  aos_buf.h  aos_crc.c  aos_crc.h  aos_crc64.c  aos_crc64.h  aos_define.h  aos_http_io.c  aos_http_io.h  aos_list.h  aos_log.c  aos_log.h  aos_status.c  aos_status.h  aos_string.h  aos_transport.c  aos_transport.h  aos_util.c  aos_util.h  oss_api.h  oss_auth.c  oss_auth.h  oss_bucket.c  oss_c_sdk.vcxproj  oss_c_sdk.vcxproj.filters  oss_c_sdk_2008.vcproj  oss_config.h  oss_config.h.in  oss_define.c  oss_define.h  oss_live.c  oss_multipart.c  oss_object.c  oss_resumable.c  oss_resumable.h  oss_util.c  oss_util.h  oss_xml.c  oss_xml.h
oss_c_sdk_sample/: CMakeLists.txt  main.c  oss_append_object_sample.c  oss_c_sdk_sample.vcxproj  oss_c_sdk_sample.vcxproj.filters  oss_c_sdk_sample_2008.vcproj  oss_callback_sample.c  oss_config.c  oss_config.h  oss_crc_sample.c  oss_delete_object_sample.c  oss_get_object_acl_sample.c  oss_get_object_meta_sample.c  oss_get_object_sample.c  oss_head_object_sample.c  oss_image_sample.c  oss_list_object_sample.c  oss_multipart_upload_sample.c  oss_progress_sample.c  oss_put_object_acl_sample.c  oss_put_object_sample.c  oss_resumable_sample.c  oss_sample_util.c  oss_sample_util.h  oss_select_object_sample.c  oss_select_sample.c
oss_c_sdk_test/: CMakeLists.txt  CuTest-README.txt  CuTest.h  cJSON.c  cJSON_Utils.h  ca-certificates.crt  cjson.c  cjson_utils.c  oss_c_sdk_test.vcxproj  oss_c_sdk_test.vcxproj.filters  oss_c_sdk_test_2008.vcproj  oss_config.c  oss_config.h  oss_test_util.c  oss_test_util.h  test.h.in  test_all.c  test_aos.c  test_oss_bucket.c  test_oss_callback.c  test_oss_crc.c  test_oss_https.c  test_oss_image.c  test_oss_live.c  test_oss_multipart.c  test_oss_object.c  test_oss_object_tagging.c  test_oss_progress.c  test_oss_proxy.c  test_oss_resumable.c  test_oss_select_object.c  test_oss_sign.c  test_oss_signature.c  test_oss_xml.c
sample/: CMakeLists.txt  oss_append_get_delete_object_from_file.c  oss_append_get_head_delete_object.c  oss_append_object_sample.c  oss_config.c  oss_config.h  oss_delete_object_sample.c  oss_get_object_sample.c  oss_head_object_sample.c  oss_init_abort_multipart.c  oss_init_complete_multipart.c  oss_init_complete_multipart_from_file.c  oss_multipart_upload_sample.c  oss_put_get_delete_object_from_file.c  oss_put_get_head_delete_object.c  oss_put_object_sample.c  oss_sample_util.c  oss_sample_util.h  oss_signed_url.c
src/: aos_buf.c  aos_buf.h  aos_define.h  aos_http_io.c  aos_http_io.h  aos_status.c  aos_status.h  aos_transport.c  aos_transport.h  aos_util.c  aos_util.h  oss_api.h  oss_auth.c  oss_auth.h  oss_bucket.c  oss_define.c  oss_define.h  oss_live.c  oss_multipart.c  oss_object.c  oss_util.c  oss_util.h  oss_xml.c  oss_xml.h
test/: CMakeLists.txt  CuTest.c  CuTest.h  oss_config.c  oss_config.h  oss_test_util.c  oss_test_util.h  test_all.c  test_aos.c  test_oss_bucket.c  test_oss_live.c  test_oss_multipart.c  test_oss_object.c
