project (oss_c_sdk_sample)

include_directories(${CMAKE_SOURCE_DIR})

set(PUT_GET_HEAD_DELETE_SOURCE_FILES oss_sample_util.c oss_config.c oss_put_get_head_delete_object.c)
set(APPEND_GET_HEAD_DELETE_SOURCE_FILES oss_sample_util.c oss_config.c oss_append_get_head_delete_object.c)
set(PUT_GET_DELETE_FROM_FILE_SOURCE_FILES oss_sample_util.c oss_config.c oss_put_get_delete_object_from_file.c)
set(APPEND_GET_DELETE_FROM_FILE_SOURCE_FILES oss_sample_util.c oss_config.c oss_append_get_delete_object_from_file.c)
set(INIT_ABORT_SOURCE_FILES oss_sample_util.c oss_config.c oss_init_abort_multipart.c)
set(INIT_COMPLETE_SOURCE_FILES oss_sample_util.c oss_config.c oss_init_complete_multipart.c)
set(INIT_COMPLETE_FROM_FILE_SOURCE_FILES oss_sample_util.c oss_config.c oss_init_complete_multipart_from_file.c)

# find_path(APR_INCLUDE_DIR apr-1/apr_time.h)
# find_path(APR_UTIL_INCLUDE_DIR apr/include/apr-1/apr_md5.h)
# find_path(MINIXML_INCLUDE_DIR mxml.h)
# find_path(CURL_INCLUDE_DIR curl/curl.h)

include_directories (${APR_INCLUDE_DIR})
include_directories (${APR_UTIL_INCLUDE_DIR})
include_directories (${MINIXML_INCLUDE_DIR})
include_directories (${CURL_INCLUDE_DIR})
include_directories ("${CMAKE_SOURCE_DIR}/src")

find_library(APR_LIBRARY apr-1 PATHS /usr/local/apr/lib/)
find_library(APR_UTIL_LIBRARY aprutil-1 PATHS /usr/local/apr/lib/)
find_library(MINIXML_LIBRARY mxml)
find_library(CURL_LIBRARY curl)
find_library(PTHREAD_LIBRARY pthread)
#find_library(SSL_LIBRARY ssl)
#find_library(IDN_LIBRARY idn)
find_library(RT_LIBRARY rt)
#find_library(OSS_C_SDK_LIBRARY oss_c_sdk HINTS ${LIBRARY_OUTPUT_PATH})

add_executable(oss_put_get_head_delete_object ${PUT_GET_HEAD_DELETE_SOURCE_FILES})
target_link_libraries(oss_put_get_head_delete_object oss_c_sdk)
target_link_libraries(oss_put_get_head_delete_object ${APR_UTIL_LIBRARY})
target_link_libraries(oss_put_get_head_delete_object ${APR_LIBRARY})
target_link_libraries(oss_put_get_head_delete_object ${MINIXML_LIBRARY})
target_link_libraries(oss_put_get_head_delete_object ${CURL_LIBRARY})
target_link_libraries(oss_put_get_head_delete_object ${PTHREAD_LIBRARY})
target_link_libraries(oss_put_get_head_delete_object ${RT_LIBRARY})

add_executable(oss_append_get_head_delete_object ${APPEND_GET_HEAD_DELETE_SOURCE_FILES})
target_link_libraries(oss_append_get_head_delete_object oss_c_sdk)
target_link_libraries(oss_append_get_head_delete_object ${APR_UTIL_LIBRARY})
target_link_libraries(oss_append_get_head_delete_object ${APR_LIBRARY})
target_link_libraries(oss_append_get_head_delete_object ${MINIXML_LIBRARY})
target_link_libraries(oss_append_get_head_delete_object ${CURL_LIBRARY})
target_link_libraries(oss_append_get_head_delete_object ${PTHREAD_LIBRARY})
target_link_libraries(oss_append_get_head_delete_object ${RT_LIBRARY})

add_executable(oss_put_get_delete_object_from_file ${PUT_GET_DELETE_FROM_FILE_SOURCE_FILES})
target_link_libraries(oss_put_get_delete_object_from_file oss_c_sdk)
target_link_libraries(oss_put_get_delete_object_from_file ${APR_UTIL_LIBRARY})
target_link_libraries(oss_put_get_delete_object_from_file ${APR_LIBRARY})
target_link_libraries(oss_put_get_delete_object_from_file ${MINIXML_LIBRARY})
target_link_libraries(oss_put_get_delete_object_from_file ${CURL_LIBRARY})
target_link_libraries(oss_put_get_delete_object_from_file ${PTHREAD_LIBRARY})
target_link_libraries(oss_put_get_delete_object_from_file ${RT_LIBRARY})

add_executable(oss_init_abort_multipart ${INIT_ABORT_SOURCE_FILES})
target_link_libraries(oss_init_abort_multipart oss_c_sdk)
target_link_libraries(oss_init_abort_multipart ${APR_UTIL_LIBRARY})
target_link_libraries(oss_init_abort_multipart ${APR_LIBRARY})
target_link_libraries(oss_init_abort_multipart ${MINIXML_LIBRARY})
target_link_libraries(oss_init_abort_multipart ${CURL_LIBRARY})
target_link_libraries(oss_init_abort_multipart ${PTHREAD_LIBRARY})
target_link_libraries(oss_init_abort_multipart ${RT_LIBRARY})

add_executable(oss_init_complete_multipart ${INIT_COMPLETE_SOURCE_FILES})
target_link_libraries(oss_init_complete_multipart oss_c_sdk)
target_link_libraries(oss_init_complete_multipart ${APR_UTIL_LIBRARY})
target_link_libraries(oss_init_complete_multipart ${APR_LIBRARY})
target_link_libraries(oss_init_complete_multipart ${MINIXML_LIBRARY})
target_link_libraries(oss_init_complete_multipart ${CURL_LIBRARY})
target_link_libraries(oss_init_complete_multipart ${PTHREAD_LIBRARY})
target_link_libraries(oss_init_complete_multipart ${RT_LIBRARY})

add_executable(oss_init_complete_multipart_from_file ${INIT_COMPLETE_FROM_FILE_SOURCE_FILES})
target_link_libraries(oss_init_complete_multipart_from_file oss_c_sdk)
target_link_libraries(oss_init_complete_multipart_from_file ${APR_UTIL_LIBRARY})
target_link_libraries(oss_init_complete_multipart_from_file ${APR_LIBRARY})
target_link_libraries(oss_init_complete_multipart_from_file ${MINIXML_LIBRARY})
target_link_libraries(oss_init_complete_multipart_from_file ${CURL_LIBRARY})
target_link_libraries(oss_init_complete_multipart_from_file ${PTHREAD_LIBRARY})
target_link_libraries(oss_init_complete_multipart_from_file ${RT_LIBRARY})
